istio/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment-v1
  labels:
    app: nodejs
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
      version: v1
  template:
    metadata:
      labels:
        app: nodejs
        version: v1
    spec:
      containers:
      - name: nodejs
        image: devops-project-webservice:latest #image
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment-v2
  labels:
    app: nodejs
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs
      version: v2
  template:
    metadata:
      labels:
        app: nodejs
        version: v2
    spec:
      containers:
      - name: nodejs
        image: devops-project-webservice:latest #image
        ports:
        - containerPort: 3000
