istio/redis-deployment-pvc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      version: v1
  template:
    metadata:
      labels:
        app: redis
        version: v1
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - mountPath: "/data/redis"
          name: redis-pvc-storage
      volumes:
        - name: redis-pvc-storage
          persistentVolumeClaim:
            claimName: redis-pvc
