istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs-virtual-service
spec:
  hosts:
  - nodejs-service
  gateways:
  - nodejs-gateway
  http:
  - route:
    - destination:
        host: nodejs-service
        subset: v1
        port:
          number: 3000
      weight: 50
    - destination:
        host: nodejs-service
        subset: v2
        port:
          number: 3000
      weight: 50
